# fxml3

./: .aider.input.history  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitflow  .gitignore  .gitmessage  .mcp.json  .mybedrock  .myvertex  .myvertex\  .pre-commit-config.yaml  .secrets.baseline  .tdd_aliases.sh  =3.0.0  AI_CICD_SETUP_SUMMARY.md  AI_PRECOMMIT_INTEGRATION_SUMMARY.md  API_REFERENCE.md  CLAUDE.md  COMPREHENSIVE_ACTION_PLAN.md  COMPREHENSIVE_API_TESTING_SUMMARY.md  DATA_FEED_INTEGRATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.data-processor  Dockerfile.frontend  Dockerfile.ui  FXML4_ACCESS_GUIDE.md  GITFLOW.md  GITFLOW_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  Jenkinsfile  MARKET_SENTIMENT_PLAN.md  Makefile  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION.md  PHASE5_PLANNING.md  PHASE5_PROGRESS.md  PREVENTION_MEASURES_VALIDATION.md  (+88 more)
.ai/: quality-gates.json  tests.yaml
.claude-tdd/: PHASE3_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  README.md  claude_tdd_main.py  config.yml  discovery_results.json  phase2_validation_report.md  requirements_phase3.txt  requirements_phase5.txt
.githooks/: install-hooks.sh  post-checkout  pre-commit  prepare-commit-msg
.github/: dependabot.yml  pull_request_template.md
archive/monorepo-experiment/libs/broker-adapters/: pyproject.toml
archive/monorepo-experiment/libs/database/: pyproject.toml
archive/monorepo-experiment/libs/messaging/: pyproject.toml
backtesting/: advanced_risk_management.py  forex_position_sizing.py
benchmark_history/: order_processing_20250916_031235.json
config/: brokers.yaml  default.yaml  fix_sessions.yaml  fxcm_demo_credentials.yaml  fxcm_integration.yaml  risk_limits.yaml
core/: __init__.py  config.py  exceptions.py
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.frontend  Dockerfile.worker  api.Dockerfile  docker-compose.fxcm.yml  docker-compose.services.yml
docs/: ACTION_PLAN_INFRASTRUCTURE_REPAIR.md  ARCHITECTURE.md  CLAUDE_TDD.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DOCUMENTATION_SUMMARY.md  FULL_STACK_AUDIT_SOLUTIONS.md  MONITORING_DASHBOARD.md  PHASE10_IMPLEMENTATION_PLAN.md  PHASE10_IMPLEMENTATION_SUMMARY.md  PHASE11_IMPLEMENTATION_PLAN.md  PHASE11_IMPLEMENTATION_SUMMARY.md  PHASE12_IMPLEMENTATION_PLAN.md  PHASE12_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_TECHNICAL_DEBT_REDUCTION_PLAN.md  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE8_IMPLEMENTATION_SUMMARY.md  PHASE9_IMPLEMENTATION_SUMMARY.md  PRODUCTION_SPECIFICATIONS.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SPRINT_1_2_1_PERFORMANCE.md  SPRINT_1_DOCUMENTATION_UPDATES.md  SPRINT_2_IMPLEMENTATION_SUMMARY.md  STRESS_TESTING.md  TDD_AUTOMATION_GUIDE.md  TDD_BROKER_ADAPTERS_SUMMARY.md  TDD_IMPLEMENTATION_GUIDE.md  TDD_IMPLEMENTATION_TRACKER.md  TDD_PHASE_CHECKLISTS.md  TDD_PLAYBOOK.md  TDD_RISK_MANAGEMENT_SUMMARY.md  TDD_SPECIFICATION.md  TDD_TEAM_TRAINING.md  TESTING_GUIDE.md  TEST_SUITE_ACTION_PLAN_PROGRESS.md  (+45 more)
elliott_wave/: config.py  main.py  requirements.txt
examples/: advanced_cv_example.py  advanced_forex_model.py  async_database_example.py  backtest_ml_strategy.py  deploy_vertex_model.py  enhanced_wave_signals_example.py  event_driven_backtest.py  feature_selection_cv_example.py  feature_selection_example.py  integrated_strategy_example.py  live_data_example.py  news_filter_example.py  paper_trading_example.py  performance_analysis_example.py  performance_metrics_example.py  phase3_integration_demo.py  realtime_features_example.py  register_vertex_model.py  risk_management_example.py  sentiment_analysis_example.py  sentiment_wave_example.py  simple_backtest_example.py  simple_performance_demo.py  test_data_modules.py  test_fractal_analysis.py  test_gbpusd_local.py  test_gbpusd_vertex.py  test_local_training.py  test_pivot_points.py  test_wave_analysis.py  train_forex_model.py  train_gbpusd_model.py  train_gbpusd_with_pivots.py  train_gbpusd_with_sessions.py  train_simple_session.py  train_simplified.py  train_with_vertex.py  vertex_ai_example.py  vertex_ai_gbpusd.py  wave_backtest_example.py
frontend/: COMPREHENSIVE_TEST_ANALYSIS.md  CRITICAL_ISSUES_ANALYSIS.md  README.production.md  next.config.js  package.json  setup.sh  test_race_condition_fix.js
ftml4-ui/: Dockerfile.production
fxml3/: .env.example  config.py  main.py
fxml4/: main.py  ui.py
fxml4-ui/: .bundlewatch.config.js  .env.example  .eslintrc.json.backup  .gitignore  API_INTEGRATION_ACTION_PLAN.md  BACKEND_API_ISSUES.md  COMPREHENSIVE_ACTION_PLAN.md  COMPREHENSIVE_FEATURE_INVENTORY.md  Dockerfile  FEATURE_TEST_PLAN.md  FIXES_COMPLETE_STATUS.md  FRONTEND_TRANSFORMATION_COMPLETE.md  FUNCTIONAL_TEST_PLAN.md  README.md  SYSTEMATIC_TEST_PLAN.md  TESTING.md  docker-compose.production.yml  jest.config.js  package-lock.json  package.json  playwright.config.ts  playwright.config.visual.ts  tailwind.config.js  test_websocket_replay.js  tsconfig.json  tsconfig.tsbuildinfo
fxml4_redesign/: .env.example  PHASE3_TRADE_MANAGER_SUMMARY.md  README.md  docker-compose.yml  mkdocs.yml  requirements-base.txt  requirements-docs.txt  start.sh
ibapi/: client.py  comm.py  connection.py  contract.py  decoder.py  enum_implem.py  errors.py  execution.py  ibapi.pyproj  ineligibility_reason.py  order_cancel.py  orderdecoder.py  tag_value.py  utils.py
input/: C_EURUSD  C_GBPUSD  C_USDCHF  C_USDJPY
ml_optimization/: compare_models.py  deploy_enhanced_model.py  deploy_optimized_model.py  economic_sentiment_features.py  optimize_gbpusd_model.py  optimize_quick.py  optimize_with_exogenous.py
monitoring/: prometheus.yml
nginx/: nginx.conf
output/: 400x_leverage_demonstration_summary.md  C_GBPUSD_4h.parquet  demo_performance_20250618_133042.json  elliott_wave_final_test_20250618_083554.txt  feature_analysis_real_data.csv  final_comprehensive_metrics.json  final_comprehensive_trades.csv  gbpusd_api_test_20250824_221112.json  leverage_100x_metrics.json  leverage_100x_trades.csv  mtf_validation_ib_demo_1_20250619_142127.json  optimized_4h_trades.csv  (+18 more)
(+2316 files in other folders)
