[tool.poetry]
name = "fxml4-database" 
version = "0.1.0"
description = "Database utilities and migrations for fxml4"
authors = ["cnross <cnross@example.com>"]
packages = [
  { include = "fxml4_database", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
fxml4-core = { path = "../../packages/core", develop = true }
asyncpg = "^0.27"
alembic = "^1.11"
sqlalchemy = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"