[tool.poetry]
name = "fxml4-messaging"
version = "0.1.0" 
description = "RabbitMQ messaging utilities for fxml4"
authors = ["cnross <cnross@example.com>"]
packages = [
  { include = "fxml4_messaging", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
fxml4-core = { path = "../../packages/core", develop = true }
aio-pika = "^9.0"
pydantic = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"